--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <nav>
+      <a class="logo" href="./index.html">iphone 13 Pro</a>
+      <nav-links>
+        <a href="#">Overviews</a>
+        <a href="#">Switcjing to iphone</a>
+        <a href="#">Tech Specs</a>
+        <button class="buy-button">Buy</button>
+      </nav-links>
+    </nav>
+    <section class="first-page">
+      <div class="first-page-text">
+        <h1 class="first-page-title">iphone 13 Pro</h1>
+        <h2 class="first-page-subtitle">Oh. So. Pro</h2>
+      </div>
+      <!-- add front page video -->
+      <video class="intro-video" autoplay src="./images/intro-animation.mov" muted></video>
+    </section>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
