--- a/index.html
+++ b/index.html
@@ -86,6 +86,40 @@
         Super Retina XDR display with ProMotion
       </p>
     </section>
+    <!-- forth page -->
+    <section class="section forth-page">
+      <div class="purchase-left">
+        <div class="phone-gallery">
+          <div class="phone-gallery-container blue-cont">
+            <img class="blue-back" src="./images/blue-iphone-back.png" alt="">
+          </div>
+          <div class="phone-gallery-container blue-cont">
+            <img class="silver-back" src="./images/silver-iphone-back.png" alt="">
+          </div>
+          <div class="phone-gallery-container blue-cont">
+            <img class="gold-back" src="./images/gold-iphone-back.png" alt="">
+          </div>
+          <div class="phone-gallery-container blue-cont">
+            <img class="graphite-back" src="./images/graphite-iphone-back.png" alt="">
+          </div>
+        </div>
+        <div class="swatch-container">
+            <div class="swatches">
+              <img src="./images/swatch-blue.svg" swatch="blue" alt="">
+              <img src="./images/swatch-silver.svg" swatch="silver" alt="">
+              <img src="./images/swatch-gold.svg" swatch="gold" alt="">
+              <img src="./images/swatch-graphite.svg" swatch="graphite" alt="">
+            </div>
+            <p><span>Sierra Blue</span>, <span>Silver</span>, <span>Gold</span>, <span>Graphite</span></p>
+        </div>
+      </div>
+      <div class="purchase-right">
+        <img class="blue phone" src="./images/blue-closeup.png" alt="">
+        <img class="silver phone" src="./images/silver-closeup.png" alt="">
+        <img class="gold phone" src="./images/gold-closeup.png" alt="">
+        <img class="graphite phone" src="./images/graphite-closeup.png" alt="">
+      </div>
+    </section>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
