--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
     <section class="third-page">
       <div class="product-text-container">
-        <div class="product-text-left">
+        <div class="product-text-right">
           <p class="phone-title">
             Iphone 13 Pro Max
           </p>
